# simple-rabbitmq

./: README.md  pyproject.toml  simple_rabbitmq
src/simple_rabbitmq/: __init__.py  consumer.py  exceptions.py  publisher.py
